Fixed z-index bug
The video was overlapping the header. This is fixed with the z-indexing

--- a/themes/digital.gov/src/uswds/scss/_header.scss
+++ b/themes/digital.gov/src/uswds/scss/_header.scss
@@ -8,7 +8,7 @@ header#header{
 	}
 	@include u-position('sticky');
 	@include u-top(0);
-	@include u-z(100);
+	@include u-z(500);
 	@include u-bg('white');
 
 	// Logo
